# Antares_Simulator

./: .gitignore  .gitmodules  AGENTS.md  COPYRIGHT.txt  README.md  mkdocs.yml  ortools_tag  push_all.sh  readthedocs.yml  requirements-doc.txt  simtest.json  sonar-project.properties
src/: CMakeLists.txt  format-code-docker.sh  format-code.sh  vcpkg-configuration.json  vcpkg.json
src/api/: API.cpp  CMakeLists.txt  SimulationObserver.cpp  SimulationResults.cpp  main.cpp  modelerProblems.cpp  modelerProblemsImpl.cpp  singleProblemGetter.cpp  singleProblemGetterImpl.cpp  solver.cpp
src/api/private/: API.h  SimulationObserver.h  modelerProblemsImpl.h  singleProblemGetterImpl.h
src/api_client_example/: CMakeLists.txt
src/api_client_example/src/: API_client.cpp  API_client.h
src/api_client_example/tests/: test.cpp
src/cmake/: antlr4-generate.cmake  common-settings.cmake  utils.cmake
src/config/: config.cpp
src/distrib/win32/: NSIS.template.in
src/expressions/: CMakeLists.txt  NodeRegistry.cpp  hashable.cpp
src/expressions/antlr-interface/: CMakeLists.txt  Expr.g4  Expr.interp  ExprBaseVisitor.h  ExprLexer.cpp  ExprLexer.h  ExprLexer.interp  ExprLexer.tokens  ExprParser.cpp  ExprParser.h  ExprVisitor.h
src/expressions/iterators/: pre-order.cpp
src/expressions/nodes/: BinaryNode.cpp  FunctionNode.cpp  ParentNode.cpp  PortFieldNode.cpp  PortFieldSumNode.cpp  TimeSumNode.cpp  UnaryNode.cpp
src/expressions/visitors/: AstDOTStyleVisitor.cpp  CloneVisitor.cpp  CompareVisitor.cpp  EvalVisitor.cpp  EvaluationContext.cpp  InvalidNode.cpp  LinearityVisitor.cpp  NodeVisitor.cpp  PrintVisitor.cpp  TimeIndexVisitor.cpp  TimeSumUtils.cpp  VariabilityVisitor.cpp
src/io/: CMakeLists.txt  file.cpp  statistics.cpp
src/io/inputs/: CMakeLists.txt
src/io/outputs/: CMakeLists.txt  ExportableName.cpp  MPSGenerator.cpp  OptimisationsSimulationTable.cpp  SimulationTable.cpp  SimulationTableCsv.cpp  SimulationTableCsvFile.cpp  SimulationTableGenerator.cpp
src/libs/antares/: CMakeLists.txt  constants.cpp  version.cpp
src/libs/fswalker/: filejob.inc.hxx  fswalker.cpp  fswalker.h  job.cpp  job.h  registry.inc.hxx  statistics.h
src/modeler/: CMakeLists.txt  FileWriter.cpp  FileWriter.h  main.cpp
src/modeler-optimisation-container/: CMakeLists.txt  EvaluationContext.cpp  OptimEntityContainer.cpp  scenarioGroupRepo.cpp  scenarioGroupRepoExceptions.cpp
src/modeler/checks/: CMakeLists.txt  checkLocation.cpp
src/modeler/fileWriter/: CMakeLists.txt  FileWriter.cpp
src/modeler/loadFiles/: CMakeLists.txt  FileLoader.cpp  handleErrors.cpp  loadAll.cpp  readDataSeries.cpp  readLibraries.cpp  readOptimConfig.cpp  readParameters.cpp  readScenarioGroup.cpp  readSystem.cpp
src/modeler/modeler/: CMakeLists.txt  Modeler.cpp
src/modeler/optimConfig/: CMakeLists.txt  optimConfig.cpp
src/modeler/parameters/: CMakeLists.txt  decoder.hxx  encoder.hxx  parseModelerParameters.cpp
src/optimisation/linear-problem-api/: CMakeLists.txt  StructuredLinearProblem.cpp  linearProblemBuilder.cpp
src/optimisation/linear-problem-data-impl/: CMakeLists.txt  Scenario.cpp  dataSeriesRepo.cpp  dataSeriesRepoExceptions.cpp  linearProblemData.cpp  timeSeriesSet.cpp  timeSeriesSetExceptions.cpp
src/optimisation/linear-problem-mpsolver-impl/: CMakeLists.txt  convertOrtoolsBasisStatus.cpp  linearProblem.cpp  mipConstraint.cpp  mipSolution.cpp  mipVariable.cpp
src/packaging/: CMakeLists.txt  Config.cmake.in
src/solver/: CMakeLists.txt  main.cpp
src/solver/application/: CMakeLists.txt  ScenarioBuilderOwner.cpp  application.cpp  process-priority.cpp
src/solver/constraints-builder/: cbuilder.cpp  create.cpp  load.cpp
src/solver/hydro/: CMakeLists.txt  probleme_spx_wrapper.cpp
src/solver/infeasible-problem-analysis/: constraint-slack-analysis.cpp  report.cpp  unfeasible-pb-analyzer.cpp  variables-bounds-consistency.cpp  watched-constraints.cpp
src/solver/lps/: CMakeLists.txt  LpsFromAntares.cpp
src/solver/misc/: CMakeLists.txt  options.cpp  system-memory.cpp  write-command-line.cpp
src/solver/modeler/: CMakeLists.txt  main.cpp
src/solver/optim-model-filler/: BendersDecomposition.cpp  CMakeLists.txt  ComponentFiller.cpp  Dimensions.cpp  EvaluationContextProvider.cpp  LinearExpression.cpp  PartialKey.cpp  ReadLinearConstraintVisitor.cpp  ReadLinearExpressionVisitor.cpp  TimeDependentLinearExpression.cpp  VariableDictionary.cpp  outOfBoundsTimeShift.cpp  scenarioGroupRepo.cpp  scenarioGroupRepoExceptions.cpp
src/solver/optimisation/: CMakeLists.txt  ComponentToAreaConnectionFiller.cpp  HebdoProblemToLpsTranslator.cpp  LegacyExtraOutputs.cpp  LegacyFiller.cpp  LegacyNameMapper.cpp  LegacySolutionView.cpp  LinearProblemMatrix.cpp  LinearProblemMatrixReserves.cpp  LinearProblemMatrixStartUpCosts.cpp  MipDetection.cpp  OptimisationsSimulationTable.cpp  ProblemMatrixEssential.cpp  QuadraticProblemMatrix.cpp  ThermalCapacityFiller.cpp  opt_alloc_probleme_a_optimiser.cpp  opt_appel_solveur_lineaire.cpp  opt_appel_solveur_quadratique.cpp  opt_calcul_des_pmin_MUT_MDT.cpp  opt_chainage_intercos.cpp  opt_construction_variables_couts_demarrages.cpp  opt_construction_variables_optimisees_lineaire.cpp  opt_construction_variables_optimisees_quadratique.cpp  opt_construction_variables_reserves.cpp  opt_decompte_variables_et_contraintes.cpp  opt_decompte_variables_et_contraintes_couts_demarrage.cpp  opt_decompte_variables_et_contraintes_reserves.cpp  opt_export_structure.cpp  opt_gestion_des_bornes_cas_lineaire.cpp  opt_gestion_des_bornes_cas_quadratique.cpp  opt_gestion_des_bornes_couts_demarrage.cpp  opt_gestion_des_bornes_reserves.cpp  opt_gestion_des_couts_cas_lineaire.cpp  opt_gestion_des_couts_cas_quadratique.cpp  opt_gestion_des_couts_couts_demarrage.cpp  opt_gestion_des_couts_reserves.cpp  opt_gestion_des_pmin.cpp  opt_gestion_second_membre_cas_lineaire.cpp  (+18 more)
src/study/: CMakeLists.txt
src/tests/: CMakeLists.txt  format_xml_report.xsl  macros.cmake  merge_all.sh
src/tools/: CMakeLists.txt
src/triplets/: x64-windows-antares.cmake  x64-windows-release.cmake
src/ui/: CMakeLists.txt
(+10620 files in other folders)
